--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,10 @@ html, body {
     background: linear-gradient(0deg, rgba(27,65,98,1) 0%, rgba(27,81,129,1) 15%, rgba(26,104,171,1) 100%);
     background-size: cover;
     background-repeat: no-repeat;
-    transform: rotateY(-10deg);
     perspective: 10cm;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
     /* animation: rotate 10s linear infinite; */
 }
 
