--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,21 @@ html, body {
     /* animation: rotate 10s linear infinite; */
 }
 
+.scene::before {
+    content: "";
+    position: absolute;
+    width: 130%;
+    height: 25%;
+    border-radius: 80% 100% 0% 0px;
+    background: linear-gradient(0deg, rgb(97, 124, 123) 0%, #325575 85%);
+    box-shadow: rgb(0 0 0 / 60%) 0px 0px 180px 50px;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    filter: blur(15px);
+    z-index: -10000;
+}
+
 .scene::after {
     content: "";
     position: absolute;
