--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ html, body {
     height: 100%;
 }
 
+
+/* [==== GENERAL STYLING ====] */
 .scene, .voxel-model, .voxel, .voxel__face, .voxel-rotation {
     transform-style: preserve-3d;
 }
@@ -37,7 +39,7 @@ html, body {
     height: 25%;
     border-radius: 80% 100% 0% 0px;
     background: linear-gradient(0deg, rgb(97, 124, 123) 0%, #325575 85%);
-    box-shadow: rgb(0 0 0 / 60%) 0px 0px 180px 50px;
+    box-shadow: rgb(0 0 0 / 60%) 0px 0px 50vh 5vh;
     bottom: -10px;
     left: 50%;
     transform: translateX(-50%);
@@ -48,14 +50,74 @@ html, body {
 .scene::after {
     content: "";
     position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     background: radial-gradient(circle, transparent 30%, rgba(0, 0, 0, 0.5) 100%);
 }
 
+.scene::after, .voxel-rotation {
+    pointer-events: none;
+}
+
+.edit-menu {
+    z-index: 10000;
+    display: flex;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%) translateY(-100px);
+    width: 100%;
+    height: auto;
+    margin-top: 20px;
+    border-radius: 25px;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+    transition: transform 0.5s ease-in-out;
+}
+
+.edit-menu.is--visible {
+    transform: translateX(-50%) translateY(0px);
+}
+
+.button {
+    will-change: box-shadow;
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: 4px solid transparent;
+    background: #00000030;
+    box-shadow: inset 0 0 0px 2px rgb(38 180 149 / 50%);
+    transition-duration: .2s;
+}
+
+.button:hover {
+    box-shadow: inset 0 0 0px 2px rgb(38 180 149 / 100%);
+}
+
+/* [==== VOXEL STYLING ====] */
 .voxel-model {
     position: absolute;
+    transition-property: transform;
     transition-timing-function: ease-in-out;
+}
+
+.voxel-model.selected::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    min-width: 50px;
+    min-height: 50px;
+    width: 125%;
+    height: 125%;
+    border: 5px solid #efefef;
+    border-radius: 10px;
+    animation: pop-in 0.2s cubic-bezier(.17,.67,.21,1.5);
+    animation-fill-mode: forwards;
 }
 
 .voxel {
@@ -101,44 +163,13 @@ html, body {
     transform: rotateX(-90deg) translateZ(var(--voxel-translate));
 }
 
-/* .voxel__face--right::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(var(--voxel-light-color), 0.05);
-}
 
-.voxel__face--left::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(var(--voxel-light-color), 0.1);
-}
-
-.voxel__face--top::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(var(--voxel-light-color), 0.15);
-}
-
-.voxel__face--bottom::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(var(--voxel-light-color), 0.2);
-} */
-
-/* rotate 360 */
-@keyframes rotate {
+/* [==== KEYFRAMES ====] */
+@keyframes pop-in {
     from {
-        transform: rotateY(0deg);
+        transform: translate(-50%, -50%) scale(0);
     }
     to {
-        transform: rotateY(360deg);
+        transform: translate(-50%, -50%) scale(1);
     }
 }
