--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     --primary-color: rgb(38 180 149);
     --secondary-color: rgb(38 180 149 / 50%);
     --transition-duration: .2s;
+    --transition-duration-menu: .5s;
 }
 
 * {
@@ -20,7 +21,7 @@ html, body {
 }
 
 
-/* [==== GENERAL STYLING ====] */
+/* [==== GENERAL ====] */
 .scene, .voxel-model, .voxel, .voxel__face, .voxel-rotation {
     transform-style: preserve-3d;
 }
@@ -66,7 +67,11 @@ html, body {
     pointer-events: none;
 }
 
-/* [==== BUTTON STYLING ====] */
+/* [==== BUTTON ====] */
+button {
+    pointer-events: visible;
+}
+
 .icon-button {
     will-change: box-shadow;
     cursor: pointer;
@@ -96,8 +101,9 @@ html, body {
 }
 
 
-/* [==== EDIT MENU STYLING ====] */
+/* [==== EDIT MENU ====] */
 .edit-menu {
+    pointer-events: none;
     z-index: 10000;
     display: flex;
     position: absolute;
@@ -112,15 +118,40 @@ html, body {
     flex-direction: row;
     justify-content: center;
     gap: 10px;
-    transition: transform 0.5s ease-in-out;
+    transition: transform var(--transition-duration-menu) ease-in-out;
 }
 
 .edit-menu.is--visible {
     transform: translateX(-50%) translateY(0px);
 }
 
+/* [==== FISH MENU ====] */
+.fish-menu {
+    will-change: transform;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    width: 250px;
+    background-color: rgb(0 0 0 / 30%);
+    z-index: 1000;
+    transform: translateX(-250px);
+    transition-duration: var(--transition-duration-menu);
+    backdrop-filter: blur(3px);
+}
 
-/* [==== VOXEL STYLING ====] */
+.fish-menu.is--visible {
+    transform: translateX(0px);
+    box-shadow: 0 0 20px 5px rgb(0 0 0 / 20%);
+}
+
+.fish-menu-button {
+    left: 100%;
+    margin: 20px;
+    position: absolute;
+}
+
+
+/* [==== VOXEL ====] */
 .voxel-model {
     position: absolute;
     transition-property: transform;
