--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 
     --primary-color: rgb(38 180 149);
     --secondary-color: rgb(38 180 149 / 50%);
+    --tertiary-color: #00000030;
+
     --transition-duration: .2s;
     --transition-duration-menu: .5s;
 }
@@ -18,6 +20,36 @@ html, body {
     margin: 0px;
     padding: 0;
     height: 100%;
+    color: white;
+    user-select: none;
+}
+
+img {
+    -webkit-user-drag: none;
+}
+
+/* [==== SCROLLBAR ====] */
+/* width and height */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-corner {
+    background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--tertiary-color);
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #00000050;
 }
 
 
@@ -79,7 +111,7 @@ button {
     width: 50px;
     border-radius: 50%;
     border: 4px solid transparent;
-    background: #00000030;
+    background: var(--tertiary-color);
     box-shadow: inset 0 0 0px 2px ;
     transition-duration: var(--transition-duration);
     display: flex;
@@ -126,7 +158,7 @@ button {
 }
 
 /* [==== FISH MENU ====] */
-.fish-menu {
+.fish-menu-container {
     will-change: transform;
     position: absolute;
     height: 100%;
@@ -134,20 +166,75 @@ button {
     width: 250px;
     background-color: rgb(0 0 0 / 30%);
     z-index: 1000;
-    transform: translateX(-250px);
+    transform: translateX(-251px);
     transition-duration: var(--transition-duration-menu);
     backdrop-filter: blur(3px);
 }
 
-.fish-menu.is--visible {
+.fish-menu-container.is--visible {
     transform: translateX(0px);
     box-shadow: 0 0 20px 5px rgb(0 0 0 / 20%);
 }
 
-.fish-menu-button {
+.fish-menu-container__button {
     left: 100%;
     margin: 20px;
     position: absolute;
+}
+
+.fish-menu {
+    overflow-y: scroll;
+    height: 100%;
+}
+
+.fish-menu .fish-menu__title {
+    height: auto;
+    font-weight: bold;
+    font-size: 1.25rem;
+    padding: 20px 15px;
+}
+
+.fish-menu .fish-menu__item {
+    display: flex;
+    flex-direction: column;
+    height: 100px;
+    background: var(--tertiary-color);
+    margin: 0 15px 15px;
+    padding: 10px;
+    transition-duration: var(--transition-duration);
+    cursor: pointer;
+}
+
+.fish-menu .fish-menu__item:hover {
+    background-color: #00000060;
+}
+
+.fish-menu .fish-menu__item:active {
+    background-color: var(--tertiary-color);
+}
+
+.fish-menu .fish-menu__item img{
+    height: auto;
+    overflow: auto;
+    position: relative;
+    object-fit: contain;
+    margin-bottom: 10px;
+    transition-duration: var(--transition-duration);
+}
+
+.fish-menu .fish-menu__item:hover img {
+    transform: scale(1.1);
+}
+
+.fish-menu .fish-menu__item:active img {
+    transform: scale(.9);
+}
+
+.fish-menu .fish-menu__item .fish-menu__item__name {
+    text-align: center;
+    text-transform: capitalize;
+    font-weight: bold;
+    font-size: .75rem;
 }
 
 
@@ -227,6 +314,13 @@ button {
 
 .voxel__face--bottom {
     transform: rotateX(-90deg) translateZ(var(--voxel-translate));
+}
+
+.fish-showcase {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
